# htmx-tutorial-todo

./: .gitignore  README.md  pyproject.toml
src/: run.py
src/htmx_tutorial_todo/: api.py  db.py  tasks.py
src/templates/: _task.html  index.html
src/tests/: conftest.py  test_api.py  test_db.py  test_tasks.py
